# multi-agent-prd-orchestrator

./: .env.example  .gitignore  :memory:  README.md  main.py  pyproject.toml  railway.json  requirements.txt  sample_prd.md
scripts/: run_api.sh  send_prd.py
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
src/frontend/src/: App.tsx  index.css  types.ts
src/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  tabs.tsx  textarea.tsx
src/prd_planner/: __init__.py
src/prd_planner/agents/: base.py  registry.py
src/prd_planner/agents/browser/: agent.py
src/prd_planner/agents/competitor/: __init__.py  agent.py
src/prd_planner/agents/market/: agent.py
src/prd_planner/api/: app.py
src/prd_planner/config/: settings.py
src/prd_planner/contracts/: schemas.py
src/prd_planner/graph/: orchestrator.py
src/prd_planner/logging/: json_logger.py
src/prd_planner/models/: __init__.py  llm_manager.py  provider.py
src/prd_planner/storage/: sqlite_store.py
src/prd_planner/tools/: exa_tool.py  playwright_tool.py
tests/: test_api.py  test_contracts.py  test_exa_strategy.py  test_llm_manager.py  test_orchestrator.py  test_playwright_lifecycle.py
